methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:12: error: expected start of definition
 override run() {
          ^